Arreglado bug z-index black panther

--- a/TP4/css/styles.css
+++ b/TP4/css/styles.css
@@ -350,6 +350,7 @@ p {
   position: absolute;
   left: 43%;
   top: 20%;
+  z-index: 5;
 }
 
 .hulk {
